Рефакторнул код, удалил то, что мешало восприятию кода. Удалил какой-то старый, неиспользуемый код, который я писал очень давно, слабо понимая, что мне может понадобиться потом

--- a/Breakout/Base.lproj/Main.storyboard
+++ b/Breakout/Base.lproj/Main.storyboard
@@ -1207,7 +1207,7 @@
             <objects>
                 <viewController id="PXT-2B-A8m" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WMU-5a-NON">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="795"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uZc-ag-9pn" userLabel="HeaderView">
@@ -1256,8 +1256,8 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="me5-23-Nkk">
-                                <rect key="frame" x="0.0" y="128" width="390" height="716"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <rect key="frame" x="0.0" y="128" width="390" height="667"/>
+                                <color key="backgroundColor" red="0.20000000000000001" green="0.015686274509803921" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="SaS-1O-98d">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -1288,20 +1288,33 @@
                             <constraint firstItem="uZc-ag-9pn" firstAttribute="top" secondItem="WMU-5a-NON" secondAttribute="top" id="vMV-r5-o6Y"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="BallUnselected" selectedImage="BallSelected" id="Mlu-dX-7dT">
+                        <inset key="imageInsets" minX="0.0" minY="12" maxX="0.0" maxY="-10"/>
+                    </tabBarItem>
+                    <connections>
+                        <segue destination="hZl-iy-4Gg" kind="presentation" modalPresentationStyle="fullScreen" id="iTQ-1i-Oor"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q9y-M9-Ozm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3592" y="2541"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Shop View Controller3D-->
         <scene sceneID="Aw1-Ca-gP7">
             <objects>
-                <tabBarController id="Div-VN-cpb" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8YB-ko-W9G">
+                <tabBarController id="Div-VN-cpb" customClass="ShopViewController3D" customModule="Breakout" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" itemPositioning="centered" itemSpacing="50" itemWidth="50" id="8YB-ko-W9G">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" red="0.090196078431372548" green="0.11372549019607843" blue="0.23137254901960785" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </tabBar>
+                    <connections>
+                        <segue destination="PXT-2B-A8m" kind="relationship" relationship="viewControllers" id="Zuy-FE-8mr"/>
+                        <segue destination="eqj-P0-daD" kind="relationship" relationship="viewControllers" id="FJP-3M-2ZT"/>
+                        <segue destination="PIf-nc-2hd" kind="relationship" relationship="viewControllers" id="dpY-PI-DYE"/>
+                    </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SJi-T7-B3w" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1399,10 +1412,10 @@
             </objects>
             <point key="canvasLocation" x="-2072" y="65"/>
         </scene>
-        <!--Shop View Controller-->
+        <!--Shop View Controller2D-->
         <scene sceneID="0dE-AF-6IR">
             <objects>
-                <tabBarController id="sLQ-jT-mcQ" customClass="ShopViewController" customModule="Breakout" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController id="sLQ-jT-mcQ" customClass="ShopViewController2D" customModule="Breakout" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" itemPositioning="centered" itemSpacing="50" itemWidth="50" id="gzj-Va-Jif">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1624,7 +1637,6 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="PaddleUnselected" selectedImage="PaddleSelected" id="wVV-Za-no3">
                         <inset key="imageInsets" minX="0.0" minY="12" maxX="0.0" maxY="-10"/>
-                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
                     </tabBarItem>
                     <connections>
                         <outlet property="backButton" destination="pRU-DF-4On" id="4NU-ne-yOR"/>
@@ -1854,7 +1866,7 @@
             <objects>
                 <viewController id="eqj-P0-daD" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2pO-r2-qSm">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="795"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sOM-kh-9ir" userLabel="HeaderView">
@@ -1903,8 +1915,8 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Wpp-21-mzW">
-                                <rect key="frame" x="0.0" y="128" width="390" height="716"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <rect key="frame" x="0.0" y="128" width="390" height="667"/>
+                                <color key="backgroundColor" red="0.20000000000000001" green="0.015686274509803921" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="stD-4v-ZaV">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -1935,6 +1947,12 @@
                             <constraint firstItem="sOM-kh-9ir" firstAttribute="leading" secondItem="SfG-lg-cXg" secondAttribute="leading" id="u7P-bz-X4s"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="PaddleUnselected" selectedImage="PaddleSelected" id="TIU-M9-3WJ">
+                        <inset key="imageInsets" minX="0.0" minY="14" maxX="0.0" maxY="-10"/>
+                    </tabBarItem>
+                    <connections>
+                        <segue destination="hZl-iy-4Gg" kind="presentation" modalPresentationStyle="fullScreen" id="iNp-4R-Ofy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jsU-ur-t05" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1945,7 +1963,7 @@
             <objects>
                 <viewController id="PIf-nc-2hd" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sZd-1W-yO9">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="795"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZVE-KV-fPT" userLabel="HeaderView">
@@ -1994,8 +2012,8 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8t6-Fl-cbh">
-                                <rect key="frame" x="0.0" y="128" width="390" height="716"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <rect key="frame" x="0.0" y="128" width="390" height="667"/>
+                                <color key="backgroundColor" red="0.20000000000000001" green="0.015686274509803921" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wH5-qb-pLD">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -2026,6 +2044,12 @@
                             <constraint firstItem="ZVE-KV-fPT" firstAttribute="leading" secondItem="8VY-gl-cn6" secondAttribute="leading" id="whm-cI-cux"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="ParticleUnselected" selectedImage="ParticleSelected" id="uxK-a8-uHu">
+                        <inset key="imageInsets" minX="0.0" minY="12" maxX="0.0" maxY="-10"/>
+                    </tabBarItem>
+                    <connections>
+                        <segue destination="hZl-iy-4Gg" kind="presentation" modalPresentationStyle="fullScreen" id="aU0-p1-C3Y"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y52-uc-bzG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -2138,7 +2162,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="zr8-MN-Mqj"/>
+        <segue reference="aU0-p1-C3Y"/>
+        <segue reference="zZ2-TM-33E"/>
         <segue reference="Y2f-0h-mfv"/>
     </inferredMetricsTieBreakers>
     <resources>
