--- a/Breakout/Base.lproj/Main.storyboard
+++ b/Breakout/Base.lproj/Main.storyboard
@@ -710,13 +710,16 @@
                                             <action selector="settingsButtonPressed:" destination="z40-AT-fRo" eventType="touchUpInside" id="RQa-9V-h4x"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Vb-EJ-DBj">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Vb-EJ-DBj" userLabel="Shop">
                                         <rect key="frame" x="232" y="0.0" width="108" height="108"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="5Vb-EJ-DBj" secondAttribute="height" multiplier="1:1" id="JE3-Hf-KZN"/>
                                         </constraints>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" image="ShopButtonPauseMenu"/>
+                                        <connections>
+                                            <segue destination="Div-VN-cpb" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="GYc-AO-Jkk"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -832,6 +835,9 @@
                                         </constraints>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" image="ShopButtonPauseMenu"/>
+                                        <connections>
+                                            <segue destination="Div-VN-cpb" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="Var-Ej-7tH"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -1165,6 +1171,9 @@
                                         </constraints>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" image="ShopButtonPauseMenu"/>
+                                        <connections>
+                                            <segue destination="Div-VN-cpb" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="kPu-Br-XRZ"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -1202,10 +1211,10 @@
             </objects>
             <point key="canvasLocation" x="-3446.1538461538462" y="800.47393364928905"/>
         </scene>
-        <!--View Controller-->
+        <!--Shop Ball Textures View Controller3D-->
         <scene sceneID="nXi-6b-tpD">
             <objects>
-                <viewController id="PXT-2B-A8m" sceneMemberID="viewController">
+                <viewController id="PXT-2B-A8m" customClass="ShopBallTexturesViewController3D" customModule="Breakout" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WMU-5a-NON">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="795"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1224,6 +1233,9 @@
                                         <state key="normal" image="BackButton">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="backButtonPressed:" destination="PXT-2B-A8m" eventType="touchUpInside" id="Tht-Ca-mqM"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="czz-eG-qR0" userLabel="UserMoney">
                                         <rect key="frame" x="225" y="55" width="100" height="58"/>
@@ -1265,7 +1277,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="fLE-7Z-3TW">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Shop3DCollectionViewCell" id="fLE-7Z-3TW">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="3KW-aa-zCp">
@@ -1291,9 +1303,6 @@
                     <tabBarItem key="tabBarItem" title="" image="BallUnselected" selectedImage="BallSelected" id="Mlu-dX-7dT">
                         <inset key="imageInsets" minX="0.0" minY="12" maxX="0.0" maxY="-10"/>
                     </tabBarItem>
-                    <connections>
-                        <segue destination="hZl-iy-4Gg" kind="presentation" modalPresentationStyle="fullScreen" id="iTQ-1i-Oor"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q9y-M9-Ozm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1451,7 +1460,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ShopCollectionViewCell" id="g5K-w3-dGD" customClass="ShopCollectionViewCell" customModule="Breakout" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Shop2DCollectionViewCell" id="g5K-w3-dGD" customClass="Shop2DCollectionViewCell" customModule="Breakout" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="r2j-IL-x1i">
@@ -1564,7 +1573,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ShopCollectionViewCell" id="2fx-5p-z3o" customClass="ShopCollectionViewCell" customModule="Breakout" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Shop2DCollectionViewCell" id="2fx-5p-z3o" customClass="Shop2DCollectionViewCell" customModule="Breakout" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="s3B-Q1-3Gt">
@@ -1773,7 +1782,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ShopCollectionViewCell" id="n78-2b-Pfd" customClass="ShopCollectionViewCell" customModule="Breakout" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Shop2DCollectionViewCell" id="n78-2b-Pfd" customClass="Shop2DCollectionViewCell" customModule="Breakout" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="PZh-PN-7zn">
@@ -1861,10 +1870,10 @@
             </objects>
             <point key="canvasLocation" x="2498" y="2541"/>
         </scene>
-        <!--View Controller-->
+        <!--Shop Paddle Textures View Controller3D-->
         <scene sceneID="5JH-UK-aKh">
             <objects>
-                <viewController id="eqj-P0-daD" sceneMemberID="viewController">
+                <viewController id="eqj-P0-daD" customClass="ShopPaddleTexturesViewController3D" customModule="Breakout" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2pO-r2-qSm">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="795"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1883,6 +1892,9 @@
                                         <state key="normal" image="BackButton">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="backButtonPressed:" destination="eqj-P0-daD" eventType="touchUpInside" id="Umz-Wa-d6v"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4gs-q3-xNF" userLabel="UserMoney">
                                         <rect key="frame" x="225" y="55" width="100" height="58"/>
@@ -1924,7 +1936,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="XRC-52-Z3E">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Shop3DCollectionViewCell" id="XRC-52-Z3E" customClass="Shop3DCollectionViewCell" customModule="Breakout" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="8OQ-y4-EbQ">
@@ -1950,18 +1962,15 @@
                     <tabBarItem key="tabBarItem" title="" image="PaddleUnselected" selectedImage="PaddleSelected" id="TIU-M9-3WJ">
                         <inset key="imageInsets" minX="0.0" minY="14" maxX="0.0" maxY="-10"/>
                     </tabBarItem>
-                    <connections>
-                        <segue destination="hZl-iy-4Gg" kind="presentation" modalPresentationStyle="fullScreen" id="iNp-4R-Ofy"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jsU-ur-t05" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2703" y="2541"/>
         </scene>
-        <!--View Controller-->
+        <!--Shop Particles Textures View Controller3D-->
         <scene sceneID="qVc-lP-6Ww">
             <objects>
-                <viewController id="PIf-nc-2hd" sceneMemberID="viewController">
+                <viewController id="PIf-nc-2hd" customClass="ShopParticlesTexturesViewController3D" customModule="Breakout" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sZd-1W-yO9">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="795"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1980,6 +1989,9 @@
                                         <state key="normal" image="BackButton">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="backButtonPressed:" destination="PIf-nc-2hd" eventType="touchUpInside" id="54J-OM-2ok"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jmc-gd-SPA" userLabel="UserMoney">
                                         <rect key="frame" x="225" y="55" width="100" height="58"/>
@@ -2021,7 +2033,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Wsc-LQ-wfx">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Shop3DCollectionViewCell" id="Wsc-LQ-wfx" customClass="Shop3DCollectionViewCell" customModule="Breakout" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="JVh-fV-Nkh">
@@ -2048,7 +2060,10 @@
                         <inset key="imageInsets" minX="0.0" minY="12" maxX="0.0" maxY="-10"/>
                     </tabBarItem>
                     <connections>
-                        <segue destination="hZl-iy-4Gg" kind="presentation" modalPresentationStyle="fullScreen" id="aU0-p1-C3Y"/>
+                        <outlet property="backButton" destination="9B0-ij-aq1" id="9xw-Xn-Y7h"/>
+                        <outlet property="collectionView" destination="8t6-Fl-cbh" id="5hT-im-2w9"/>
+                        <outlet property="headerTopView" destination="ZVE-KV-fPT" id="WMJ-hN-Dfo"/>
+                        <outlet property="userMoneyLabel" destination="jmc-gd-SPA" id="wbF-qS-8g4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y52-uc-bzG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -2162,9 +2177,9 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="aU0-p1-C3Y"/>
-        <segue reference="zZ2-TM-33E"/>
+        <segue reference="yGa-Sh-8Tf"/>
         <segue reference="Y2f-0h-mfv"/>
+        <segue reference="GYc-AO-Jkk"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="ARButton" width="1000" height="1000"/>
