--- a/Breakout/2D/Menu/LevelsMenu/LevelsMenuViewCell/LevelsMenuCollectionViewCell.xib
+++ b/Breakout/2D/Menu/LevelsMenu/LevelsMenuViewCell/LevelsMenuCollectionViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,8 +22,14 @@
                 <rect key="frame" x="0.0" y="0.0" width="116" height="114"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kns-Xe-LV2">
+                        <rect key="frame" x="15" y="67.666666666666671" width="86" height="34.333333333333329"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="Kns-Xe-LV2" secondAttribute="height" multiplier="107:40" constant="-5.6499999999999915" id="JTh-yn-Mvo"/>
+                        </constraints>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="40" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hVj-we-95H" userLabel="LevelNumber">
-                        <rect key="frame" x="5" y="5" width="106" height="104"/>
+                        <rect key="frame" x="-6.6666666666666643" y="17.999999999999996" width="129.33333333333334" height="54.666666666666657"/>
                         <fontDescription key="fontDescription" name="Bungee-Regular" family="Bungee" pointSize="100"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -34,14 +40,17 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="hVj-we-95H" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="JON-Hk-yui"/>
-                <constraint firstAttribute="trailing" secondItem="hVj-we-95H" secondAttribute="trailing" constant="5" id="JpV-ku-QlY"/>
-                <constraint firstItem="hVj-we-95H" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="XWw-5b-wNz"/>
-                <constraint firstAttribute="bottom" secondItem="hVj-we-95H" secondAttribute="bottom" constant="5" id="qkE-2B-zMS"/>
+                <constraint firstItem="hVj-we-95H" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="E6j-Uy-SCE"/>
+                <constraint firstItem="hVj-we-95H" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="18" id="Ib0-xM-TVh"/>
+                <constraint firstAttribute="bottom" secondItem="Kns-Xe-LV2" secondAttribute="bottom" constant="12" id="SPS-7b-lPV"/>
+                <constraint firstItem="Kns-Xe-LV2" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="15" id="bSN-YJ-L4k"/>
+                <constraint firstAttribute="trailing" secondItem="Kns-Xe-LV2" secondAttribute="trailing" constant="15" id="bvK-8L-1Sn"/>
+                <constraint firstItem="Kns-Xe-LV2" firstAttribute="top" secondItem="hVj-we-95H" secondAttribute="bottom" constant="-5" id="pP1-nX-xpL"/>
             </constraints>
             <size key="customSize" width="116" height="114"/>
             <connections>
                 <outlet property="levelNumber" destination="hVj-we-95H" id="NH1-tN-dkG"/>
+                <outlet property="starImageView" destination="Kns-Xe-LV2" id="elS-cQ-EaF"/>
             </connections>
             <point key="canvasLocation" x="87.022900763358777" y="-44.366197183098592"/>
         </collectionViewCell>
